--- a/src/userinterface/ListOfContactsView.fxml
+++ b/src/userinterface/ListOfContactsView.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Pagination?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -12,9 +11,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="864.0" prefWidth="1536.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="userinterface.ListOfContactsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="userinterface.ListOfContactsController">
    <children>
-      <HBox layoutX="14.0" layoutY="44.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="1508.0">
+      <HBox layoutX="14.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="1350.0">
          <children>
             <VBox prefHeight="100.0" prefWidth="440.0">
                <children>
@@ -23,7 +22,7 @@
                         <Font name="Impact" size="24.0" />
                      </font>
                      <VBox.margin>
-                        <Insets left="137.0" />
+                        <Insets left="137.0" top="30.0" />
                      </VBox.margin>
                   </Label>
                   <TextField fx:id="searchField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="440.0">
@@ -41,7 +40,7 @@
                   <Font name="Impact" size="24.0" />
                </font>
                <HBox.margin>
-                  <Insets left="20.0" top="40.0" />
+                  <Insets left="20.0" top="70.0" />
                </HBox.margin>
             </Button>
             <Button fx:id="listAllContactsButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionListAllContacts" prefHeight="45.0" prefWidth="200.0" text="List all contacts">
@@ -61,9 +60,9 @@
                </HBox.margin>
             </Button>
          </children></HBox>
-      <HBox layoutX="14.0" layoutY="200.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="547.0" prefWidth="1508.0">
+      <HBox layoutX="14.0" layoutY="200.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="547.0" prefWidth="1350.0">
          <children>
-            <TableView fx:id="tableView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1310.0" stylesheets="@style.css">
+            <TableView fx:id="tableView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="554.0" prefWidth="1338.0" stylesheets="@style.css">
               <columns>
                 <TableColumn fx:id="firstNameColumn" prefWidth="180.0" text="First name" />
                 <TableColumn fx:id="lastNameColumn" prefWidth="180.0" text="Last name" />
@@ -72,222 +71,26 @@
                   <TableColumn fx:id="emailColumn" prefWidth="400.0" text="Email" />
               </columns>
             </TableView>
-            <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="200.0">
-               <HBox.margin>
-                  <Insets top="49.0" />
-               </HBox.margin>
-               <children>
-                  <HBox prefHeight="45.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="updateButton0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionUpdate0" prefHeight="35.0" prefWidth="78.0" text="Update">
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button fx:id="deleteButton0" mnemonicParsing="false" onAction="#actionDelete0" prefHeight="35.0" prefWidth="78.0" text="Delete">
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                        </Button>
-                     </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="10.0" prefHeight="45.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="updateButton1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionUpdate1" prefHeight="35.0" prefWidth="78.0" text="Update">
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button fx:id="deleteButton1" mnemonicParsing="false" onAction="#actionDelete1" prefHeight="35.0" prefWidth="78.0" text="Delete">
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                        </Button>
-                     </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="55.0" prefHeight="45.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="updateButton2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionUpdate2" prefHeight="35.0" prefWidth="78.0" text="Update">
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button fx:id="deleteButton2" mnemonicParsing="false" onAction="#actionDelete2" prefHeight="35.0" prefWidth="78.0" text="Delete">
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                        </Button>
-                     </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="100.0" prefHeight="45.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="updateButton3" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionUpdate3" prefHeight="35.0" prefWidth="78.0" text="Update">
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button fx:id="deleteButton3" mnemonicParsing="false" onAction="#actionDelete3" prefHeight="35.0" prefWidth="78.0" text="Delete">
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                        </Button>
-                     </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="145.0" prefHeight="45.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="updateButton4" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionUpdate4" prefHeight="35.0" prefWidth="78.0" text="Update">
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button fx:id="deleteButton4" mnemonicParsing="false" onAction="#actionDelete4" prefHeight="35.0" prefWidth="78.0" text="Delete">
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                        </Button>
-                     </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="190.0" prefHeight="45.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="updateButton5" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionUpdate5" prefHeight="35.0" prefWidth="78.0" text="Update">
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button fx:id="deleteButton5" mnemonicParsing="false" onAction="#actionDelete5" prefHeight="35.0" prefWidth="78.0" text="Delete">
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                        </Button>
-                     </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="235.0" prefHeight="45.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="updateButton6" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionUpdate6" prefHeight="35.0" prefWidth="78.0" text="Update">
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button fx:id="deleteButton6" mnemonicParsing="false" onAction="#actionDelete6" prefHeight="35.0" prefWidth="78.0" text="Delete">
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                        </Button>
-                     </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="280.0" prefHeight="45.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="updateButton7" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionUpdate7" prefHeight="35.0" prefWidth="78.0" text="Update">
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button fx:id="deleteButton7" mnemonicParsing="false" onAction="#actionDelete7" prefHeight="35.0" prefWidth="78.0" text="Delete">
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                        </Button>
-                     </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="325.0" prefHeight="45.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="updateButton8" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionUpdate8"  prefHeight="35.0" prefWidth="78.0" text="Update">
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button fx:id="deleteButton8" mnemonicParsing="false" onAction="#actionDelete8" prefHeight="35.0" prefWidth="78.0" text="Delete">
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                        </Button>
-                     </children>
-                  </HBox>
-                  <HBox layoutX="10.0" layoutY="370.0" prefHeight="45.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="updateButton9" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionUpdate9"  prefHeight="35.0" prefWidth="78.0" text="Update">
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                        </Button>
-                        <Button fx:id="deleteButton9" mnemonicParsing="false" onAction="#actionDelete9" prefHeight="35.0" prefWidth="78.0" text="Delete">
-                           <HBox.margin>
-                              <Insets left="20.0" top="5.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font name="Impact" size="18.0" />
-                           </font>
-                        </Button>
-                     </children>
-                  </HBox>
-               </children></VBox>
          </children>
       </HBox>
-      <HBox layoutX="14.0" layoutY="725.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="1506.0">
+      <HBox layoutX="14.0" layoutY="112.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="1158.0">
          <children>
-            <Pagination fx:id="pagination" prefHeight="126.0" prefWidth="400.0">
+            <Button fx:id="listAllContactsButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionListAllContacts" prefHeight="45.0" prefWidth="200.0" text="Update contact">
+               <font>
+                  <Font name="Impact" size="24.0" />
+               </font>
                <HBox.margin>
-                  <Insets left="400.0" />
+                  <Insets left="640.0" top="15.0" />
                </HBox.margin>
-            </Pagination>
-         </children>
-      </HBox>
+            </Button>
+            <Button fx:id="listAllContactsButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionListAllContacts" prefHeight="45.0" prefWidth="200.0" text="Delete contact">
+               <font>
+                  <Font name="Impact" size="24.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="60.0" top="15.0" />
+               </HBox.margin>
+            </Button>
+         </children></HBox>
    </children>
 </AnchorPane>
